src/themes/_material/_mat-form-field.scss
@use 'sass:map';
@use 'sass:meta';
@use '@angular/material' as theming;


@mixin _custom-mat-form-field-density($font-size, $base-input-font-size: 16px) {

  font-size: $font-size;

  .mat-form-field-flex {
    align-items: center !important;
  }

  .mat-form-field-prefix,
  .mat-form-field-suffix {
    font-size: $base-input-font-size;
    transform: translateY(-0.125em); // original: unset
    .mat-icon-button {
      width: 2.2em !important; // original: 2.4em
      height: 2.2em !important; // original: 2.4em
    }
  }

  .mat-datepicker-toggle,
  .mat-select,
  .mat-input-element,
  .mat-form-field-label mat-label,
  .mat-form-field-required-marker {
    font-size: $base-input-font-size;
  }

  .mat-form-field-subscript-wrapper {
    font-size: $base-input-font-size * .75; // original 75%
  }

  .mat-icon {
    font-size: calc($base-input-font-size * 1.5); // original: 150%
  }

  .mat-form-field-wrapper {
    padding-bottom: calc($base-input-font-size * 1.34375); // original: 1.34375em
  }

  .mat-form-field-underline {
    bottom: calc($base-input-font-size * 1.34375); // original: 1.34375em
  }

  // outline
  &.mat-form-field-appearance-outline {
    // without label
    .mat-form-field-infix {
      padding-top: 0.875em; // original: 1em
      padding-bottom: 1.125em; // original: 1em
    }
    // with label
    &.mat-form-field-has-label .mat-form-field-infix {
      padding-top: 0.75em; // original: 1em
      padding-bottom: 1.25em; // original: 1em
    }
    .mat-select-arrow-wrapper {
      transform: translateY(0);
    }
    .mat-form-field-flex {
      padding-left: calc($base-input-font-size * 0.75);
      padding-right: calc($base-input-font-size * 0.75);
    }
  }

  // fill
  &.mat-form-field-appearance-fill {
    .mat-form-field-wrapper {
      margin: 0.25em 0;
    }
    // without label
    .mat-form-field-infix {
      padding-top: 0;
      padding-bottom: 1em;
    }
    // with label
    &.mat-form-field-has-label .mat-form-field-infix {
      padding-top: 0.375em; // original: 0.25em
      padding-bottom: 0.625em; // original: 0.75em
    }
    .mat-form-field-flex {
      padding-left: calc($base-input-font-size * 0.75);
      padding-right: calc($base-input-font-size * 0.75);
    }
  }

  // standard
  &.mat-form-field-appearance-standard {
    .mat-form-field-wrapper {
      margin: 0.25em 0;
    }
    // without label
    .mat-form-field-infix {
      padding-top: 0;
      padding-bottom: 1em;
    }
    // with label
    &.mat-form-field-has-label .mat-form-field-infix {
      padding-top: 0.5em;
      padding-bottom: 0.5em;
    }
  }

  // legacy
  &.mat-form-field-appearance-legacy {
    .mat-form-field-label span {
      font-size: $base-input-font-size;
    }
  }
}

/*
@mixin _custom-hide-floating-label() {

  &.mat-form-field-can-float.mat-form-field-should-float,
  &.mat-form-field-can-float .mat-input-server:focus + .mat-form-field-label-wrapper {
    .mat-form-field-label {
      display: none;
    }
  }

  // outline
  &.mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-outline-gap {
    border-color: currentColor;
  }

  // fill
  &.mat-form-field-appearance-fill .mat-form-field-infix {
    padding-top: 0;
    padding-bottom: 1em;
  }

  // standard
  &.mat-form-field-appearance-standard .mat-form-field-infix {
    padding: 0 0 1em;
    .mat-form-field-label {
      top: 0.625em;
    }
  }

  // legacy
  &.mat-form-field-appearance-legacy .mat-form-field-infix {
    //padding: 0 0 1em;
    .mat-form-field-label {
      top: 0.625em;
    }
  }
}
*/

@mixin color($theme) {

  $config: theming.get-color-config($theme);
  $warn: map.get($config, warn);

  .mat-form-field .mat-form-field-required-marker {
    color: theming.get-color-from-palette($warn);
  }

}


@mixin typography($theme) {
}


@mixin density($theme) {

  $config: theming.get-typography-config($theme);
  $base-input-font-size: map.get(map.get($config, input), font-size);

  .mat-form-field .mat-form-field-flex {
    gap: 4px;
  }

  .mat-form-field {
    @include _custom-mat-form-field-density($base-input-font-size, $base-input-font-size);
  }

  // ~40px with 14px base input size
  .mat-form-field[dense] {
    @include _custom-mat-form-field-density(9.7px, $base-input-font-size);
  }

  // ~32px with 14px base input size
  .mat-form-field[compact] {
    @include _custom-mat-form-field-density(6.6px, $base-input-font-size);
  }

  .mat-form-field[hide-subscript] {
    .mat-form-field-wrapper {
      padding-bottom: 0;
    }
    .mat-form-field-subscript-wrapper {
      display: none;
    }
    .mat-form-field-underline {
      bottom: 0;
    }
  }

}


@mixin theme($theme) {
  @include color($theme);
  @include typography($theme);
  @include density($theme);
}

